# Wegent-local-deployment

./: AGENTS.md  README_zh.md  docker-compose.e2e.yml  docker-compose.yml
.github/workflows/: e2e-tests.yml
backend/app/api/endpoints/: repository.py
backend/app/repository/: gitea_provider.py
backend/app/schemas/: kind.py  shared_task.py  team.py
backend/app/services/: repository.py  repository_job.py  shared_task.py  user.py  wiki_service.py
backend/app/services/adapters/: task_kinds.py  team_kinds.py
backend/init_data/: 01-default-resources.yaml
executor/: pyproject.toml  requirements.txt
executor/agents/agno/: gitlab_tool_manager.py  member_builder.py  repository_detector.py
frontend/: .gitignore  .nycrc.json  package-lock.json  package.json  playwright.config.ts
frontend/e2e/: E2E_TEST_FIXES.md  README.md
frontend/e2e/config/: environment.ts  index.ts  test-users.ts
frontend/e2e/fixtures/: data-builders.ts  index.ts  test-file.txt
frontend/e2e/helpers/: coverage.ts
frontend/e2e/pages/: base.page.ts  index.ts
frontend/e2e/pages/admin/: admin.page.ts  users.page.ts
frontend/e2e/tests/: auth.spec.ts  chat-task.spec.ts  code-task.spec.ts  settings-bot.spec.ts  settings-github.spec.ts  settings-model.spec.ts  settings-team.spec.ts
frontend/e2e/utils/: api-client.ts  cleanup.ts  helpers.ts  index.ts  performance.ts  visual-regression.ts
frontend/scripts/: download-fonts.cjs  download-fonts.cjs.bak
frontend/src/apis/: chat.ts  team.ts
frontend/src/types/: api.ts
scripts/: run-e2e-local.sh
shared/: pyproject.toml  pytest.ini
(+56 files in other folders)
